Add build script

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -30,14 +30,7 @@ jobs:
       - name: Build wasm
         run: |
           cargo install wasm-pack
-          wasm-pack build --target web --features wasm
-          cd reconcile-js
-          npm ci
-          npm run build
-          cd ../examples/website
-          npm ci
-          npm run build
-
+          scripts/build-website.sh
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
