--- a/examples/website/package.json
+++ b/examples/website/package.json
@@ -22,7 +22,7 @@
   ],
   "homepage": "https://github.com/schmelczer/reconcile#readme",
   "devDependencies": {
-    "reconcile": "file:../../reconcile-js",
+    "reconcile-text": "file:../../reconcile-js",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
