--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "reconcile-text"
-description = "Think diff3 or git merge, but with automated conflict resolution that requires no user intervention"
+description = "Intelligent 3-way text merging with automated conflict resolution"
 version = "0.4.8"
 rust-version = "1.85"
 authors = ["Andras Schmelczer <andras@schmelczer.dev>"]
