Add cursors to example

--- a/examples/website/tsconfig.json
+++ b/examples/website/tsconfig.json
@@ -7,9 +7,11 @@
     "esModuleInterop": true,
     "moduleResolution": "bundler",
     "outDir": "./dist",
-    "rootDir": ".",
+    "rootDir": "./src",
     "skipLibCheck": true,
     "inlineSourceMap": true
   },
-  "exclude": ["./dist"]
+  "exclude": [
+    "./dist"
+  ]
 }
