--- a/examples/website/package.json
+++ b/examples/website/package.json
@@ -22,12 +22,13 @@
   ],
   "homepage": "https://github.com/schmelczer/reconcile#readme",
   "devDependencies": {
-    "reconcile-text": "file:../../reconcile-js",
+    "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
-    "mini-css-extract-plugin": "^2.9.2",
     "inline-source-webpack-plugin": "^3.0.1",
+    "mini-css-extract-plugin": "^2.9.2",
     "prettier": "^3.6.2",
+    "reconcile-text": "file:../../reconcile-js",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.89.2",
     "sass-loader": "^16.0.5",
