--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,12 +32,11 @@ wasm-bindgen = { version = "0.2.99", optional = true }
 console_error_panic_hook = { version = "0.1.7", optional = true }
 
 wee_alloc = { version = "0.4.2", optional = true }
-cfg-if = "1.0.1"
 
 [features]
 default = []
 serde = [ "dep:serde" ]
-wasm = [ "dep:wasm-bindgen" ]
+wasm = [ "dep:wasm-bindgen", "dep:wee_alloc" ]
 console_error_panic_hook = [ "dep:console_error_panic_hook" ]
 
 [dev-dependencies]
