--- a/reconcile-js/tsconfig.json
+++ b/reconcile-js/tsconfig.json
@@ -8,7 +8,6 @@
     "declaration": true,
     "declarationDir": "./dist/types",
     "skipLibCheck": true,
-    "inlineSourceMap": true
+    "inlineSourceMap": true,
   },
-  "exclude": ["./dist", "**/*.test.ts"]
 }
