--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,4 @@
 [toolchain]
-channel = "1.91.1"
+channel = "nightly-2025-06-06"
 targets = [ "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl" ]
 profile = "default"
