--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ path = "examples/merge-file.rs"
 
 [dependencies]
 serde = { version = "1.0.219", optional = true, features = ["derive"] }
+thiserror = "2.0.17"
 
 wasm-bindgen = { version = "0.2.99", optional = true }
 
